# mmc-watershed-data

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  build_backend.py  pyproject.toml  sitecustomize.py
.ipynb_checkpoints/: README-checkpoint.md
docs/specs/: sprint-1.md
docs/specs/.ipynb_checkpoints/: sprint-1-checkpoint.md
src/mmc_watershed_data/: __init__.py  api.py  cli.py  config.py  models.py  storage.py
tests/: test_api.py  test_storage.py
